# Engram-AI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  smithery.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: ClientLayout.tsx  MiniGraph.tsx  NavTabs.tsx  ProjectSelector.tsx  RecentExperiences.tsx  StatsCards.tsx  ValenceTrend.tsx
dashboard/src/contexts/: ProjectContext.tsx
dashboard/src/hooks/: useApi.ts  useWebSocket.ts
dashboard/src/lib/: types.ts
docs/i18n/: README_es.md  README_ja.md  README_ko.md  README_zh.md
docs/plans/: 2026-03-17-engram-ai-v0.1-implementation.md
docs/promotion/: devto-article.md  discord-messages.md  hacker-news.md  product-hunt.md  qiita-article.md  reddit-claudeai.md  reddit-locallama.md  reddit-machinelearning.md  reddit-python.md  twitter-thread-en.md  twitter-thread-ja.md  zenn-article.md
docs/specs/: 2026-03-17-engram-ai-dashboard-design.md  2026-03-17-engram-ai-v0.1-design.md
docs/superpowers/plans/: 2026-03-17-engram-ai-v0.2-implementation.md  2026-03-17-mcp-auto-observe-implementation.md  2026-03-17-v0.3-product-enhancement.md  2026-03-17-web-dashboard.md  2026-03-18-intelligence-pack.md  2026-03-18-pip-mcp-distribution.md
docs/superpowers/specs/: 2026-03-17-engram-ai-discord-server-design.md  2026-03-17-engram-ai-v0.2-design.md  2026-03-17-intelligence-pack-design.md  2026-03-17-mcp-auto-observe-design.md  2026-03-17-v0.3-product-enhancement-design.md  2026-03-18-pip-mcp-distribution-design.md  2026-03-18-smithery-http-deploy-design.md
examples/: 01_basic.py  02_teach_and_warn.py  03_multi_project.py  04_no_api_key.py  05_observe.py  06_custom_llm.py  README.md
src/engram_ai/: __init__.py  cli.py  exceptions.py  forge.py  mcp.py  project.py  scheduler.py
src/engram_ai/adapters/: __init__.py  _delimiters.py  base.py  claude_code.py  cursor.py  gemini.py  windsurf.py
src/engram_ai/core/: crystallizer.py  evolver.py  querier.py  recorder.py
src/engram_ai/dashboard/: api.py  server.py
src/engram_ai/events/: bus.py  events.py
src/engram_ai/llm/: __init__.py  base.py  claude.py
src/engram_ai/models/: evolution.py  experience.py  (+1 more)
tests/: conftest.py  test_cli.py  test_distribution.py  test_forge.py  test_forge_pending.py  test_hook_auto_learn.py  test_intelligence_pack.py  test_mcp.py  test_mcp_http.py  test_project.py  test_scheduler.py
tests/adapters/: test_claude_code.py  test_cursor.py  test_delimiters.py  test_gemini.py  test_windsurf.py
tests/core/: test_crystallizer.py  test_evolver.py  test_querier.py  test_recorder.py
tests/dashboard/: test_api.py  test_websocket.py
tests/events/: test_bus.py
tests/integration/: test_full_flow.py
tests/llm/: test_claude.py  test_extract.py
tests/models/: test_evolution.py  test_experience.py  test_skill.py
tests/policies/: test_conflict.py  test_decay.py
tests/storage/: test_chromadb.py
(+34 files in other folders)
