[project]
name = "engram-forge"
version = "0.4.0"
description = "Experience-driven memory infrastructure for AI agents"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["ai", "agent", "memory", "experience", "learning"]

dependencies = [
    "chromadb>=0.5.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0", "uvicorn[standard]>=0.30.0"]
claude = ["anthropic>=0.40.0"]
dashboard = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "httpx>=0.27.0",
]
full = ["engram-forge[mcp,claude,dashboard]"]

[project.scripts]
engram-forge = "engram_ai.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"engram_ai" = ["dashboard/static/**/*", "dashboard/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
